Remove unneeded div for safari overflow issue, open github link in new tab

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -13,17 +13,12 @@ body {
     width: 100%;
     height: 100%;
     margin: 0;
+    overflow: hidden;
+    position: relative;
 }
 
 body {
     font-family: arial;
-}
-
-#clockContainer {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    position: fixed;
 }
 
 .centeredColumn {
@@ -110,7 +105,7 @@ body {
 .moveOutLeft,
 .moveInFromBottom,
 .moveInFromTop {
-    animation-duration: 0.4s;
+    animation-duration: 0.3s;
     animation-fill-mode: forwards;
     animation-timing-function: linear;
 }
